--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://angelqtypie.github.io/it35-lab/",
   "scripts": {
     "dev": "vite",
+    "predeploy" : "npm run build",
+   "deploy" : "gh-pages -d dist",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test.e2e": "cypress run",
