--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
-    "predeploy" : "npm run build",
-   "deploy" : "gh-pages -d dist",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test.e2e": "cypress run",
@@ -20,8 +18,10 @@
     "@capacitor/core": "7.0.1",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "bcryptjs": "^3.0.2",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
