--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-router-dom": "^5.3.3",
     "bcryptjs": "^3.0.2",
     "ionicons": "^7.0.0",
+    "lucide-react": "^0.488.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
